[package]
name = "tinker-worker"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
usvg = "0.35.0"
resvg = "0.35.0"
tiny-skia = "0.10"
chrono = "0.4.26"
chrono-tz = "0.8.3"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.31.0", features = ["rt", "macros"] }
roxmltree = "0.18.0"
serde_json = "1.0.105"
dotenv = "0.15.0"
image = { version = "0.24.7", default-features = false, features = ["bmp"] }
bitvec = "1.0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
