[package]
name = "tinker-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
usvg = "0.35.0"
resvg = "0.35.0"
tiny-skia = "0.10"
chrono = "0.4.26"
chrono-tz = "0.8.3"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.31.0", features = ["rt", "macros", "rt-multi-thread", "fs"] }
roxmltree = "0.18.0"
serde_json = "1.0.105"
dotenv = "0.15.0"
image = { version = "0.24.7", default-features = false, features = ["bmp"] }
bitvec = "1.0.1"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
